vertical.css
/* ... */
.section_type1 {
    aspect-ratio: 4 / 3;
    height: 25vw;
    background-color: rgba(0, 189, 132, 0.884);
    border-radius: 0.7vw;
    top: 0;
    bottom: 0;
    left: -24vw;
    right: 0;
    margin: auto;
    position: absolute;
    z-index: 2;
    box-shadow: 0 0 2vw rgba(0, 0, 0, 0.4);



}

.section_type2 {
    aspect-ratio: 3 / 2;
    height: 30vw;
    background-size: contain;
    top: 0;
    bottom: 0;
    left: 12vw;
    right: 0;
    margin: auto;
    position: absolute;
    z-index: 1;
    box-shadow: 0 0 1vw rgba(0, 0, 0, 0.4);


}

.inside_section {
    position: relative;
    background-color: none;
    width: 90%;
    margin: auto;
    
}
.text_top {
    margin: 0.4vw;
    margin-top: 1.4vw;
    margin-bottom: 1vw;
    font-size: 2vw;
    color: white;
    text-align: center;


}

.text_main {
    margin: 0.4vw;
    font-size: 1.2vw;
    color: white;
    text-align: left;


}



.text_top {
    margin: 0.4vw;
    margin-top: 1.4vw;
    margin-bottom: 1.4vw;
    font-size: 3vw !important;
    color: white;
    text-align: center;


}

.text_main {
    margin: 0.6vw;
    font-size: 1.4vw !important;
    color: white;
    text-align: left;


}

.start_msg {
    rotate: -90deg;
}

.start_msg_text {

    font-size: 3vw;


}

#start_msg_closer {
    width: 3vw;
    height: 3vw;
    top: -12%;
    right: -8%;
}




.textbox {
    rotate: -90deg;
    transform: translate(-17%, -120%);
    font-size: 3vw;
}

@keyframes updownloop {
    0% {transform: translateX(-1vw);}
    50% {transform: translateX(1vw);}
    100% {transform: translateX(-1vw);}
}

.section_type1{
    height: 20vw !important;
    left: -20vw !important;
    rotate: -90deg;
    aspect-ratio: 2 / 1 !important;

}

.section_type2{
    height: 25vw !important;
    rotate: -90deg;
    left: 3vw !important;
    aspect-ratio: 16 / 9 !important;

}


.button_c_icon, .button_b_icon, .button_a_text, .moveup1box, .closer {
    rotate: -90deg;
}


html {
    background-color: black;
}

.main_container {
    height: 25vw;
    width: auto;
    transform: translateY(4vw);
    rotate: 90deg;

}

.elements_container {
    box-shadow: 1vw 0vw 2vw rgb(0, 0, 0) inset, -1vw 0vw 2vw rgb(0, 0, 0) inset, 0vw 1vw 2vw rgb(0, 0, 0) inset, 0vw -1vw 2vw rgb(0, 0, 0) inset;
        
}



.start_msg_text {

    font-size: 120%;


}

@keyframes move_bg1 {
    0% {top: 0%;}
    100% {top: 100%;}

}

.m1fix {
    transform: translate(-15%, 0%) scale(25%) !important;
}

.m2fix {
    transform: translate(0%, 0%) scale(25%) !important;
}

.m3fix {
    transform: translate(-30%, 0%) scale(25%) !important;
}


#closer1{
    left: 79.5%;
    right: 0;
    top: 0;
    bottom: 0;
    margin: auto;

    width: 7%;
    height: auto;
    aspect-ratio: 1/1;
}

#closer2{
left: 79.5%;
right: 0;
top: 0;
bottom: 0;
margin: auto;

width: 7%;
height: auto;
aspect-ratio: 1/1;
}

#closer3{
left: 79.5%;
right: 0;
top: 0;
bottom: 0;
margin: auto;

width: 7%;
height: auto;
aspect-ratio: 1/1;
}


.button_a_text {
            
    font-size: 80%;
        
}



/* MEDIA START */

@media screen and (min-width: 0px) {
    .main_container {
        scale: 285%;
        transform: translateY(0vw);
        

    }

    .slider {
        scale: 60%;
    }

}

@media screen and (max-width: 1000px) {
    .main_container {
        scale: 330%;
        transform: translateY(0vw);


    }

}

@media screen and (max-width: 900px) {
    .main_container {
        scale: 345%;
        transform: translateY(0vw);


    }

}

@media screen and (max-width: 800px) {
    .main_container {
        scale: 300%;
        transform: translateY(0vw);


    }

}

@media screen and (max-width: 700px) {
    .main_container {
        scale: 325%;
        transform: translateY(0vw);


    }

}

    @media screen and (max-width: 600px) {
        .main_container {
            scale: 365%;
            transform: translateY(0vw);
    
    
        }

    }

        @media screen and (max-width: 500px) {
            .main_container {
                scale: 375%;
                transform: translateY(0vw);
        
        
            }

            @media screen and (max-width: 400px) {
                .main_container {
                    scale: 375%;
                    transform: translateY(0vw);
            
            
                }

            }

}



/* MEDIA END */

.element_box{
    outline: rgba(255, 0, 0, 0) 1px solid;
}

.inactive {
    opacity: 0 !important;
    pointer-events: none !important;
}


.main_overlay {
    background-color: rgba(255, 255, 255, 0.162) !important;
}

